[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/speedAura.png" type="Texture" id=1]
[ext_resource path="res://Scripts/SpeedAura.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[node name="SpeedAura" type="AnimatedSprite"]
z_index = -1
frames = SubResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="bodyEntered"]
[connection signal="body_exited" from="Area2D" to="." method="bodyExited"]
